hphp/test/slow/namespace/hashbang_2.php.expectf

Fatal error: Namespace declaration statement has to be the very first statement in the scrip%s in %s/test/slow/namespace/hashbang_2.php on line 4
